--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -979,7 +979,7 @@ ul.list-bullet li {
 ----------------------------------------- */
 /* Theme Color CSS */
 .theme-color-1 {
-  --color-primary: #C19F5F;
+  --color-primary: #85C33C;
   --color-primary-rgb: 193, 159, 95;
   --btn-color: var(--color-dark);
 }
